add lodash, earth radius constant, get bootcamps with geo data and update swagger
