# routes/bootcamps.js
@@ -9,5 +9,7 @@ BootcampRouter.route('/:id')
   .get(asyncMiddleware(BootcampController.getBootcamp))
   .put(asyncMiddleware(BootcampController.updateBootcamp))
   .delete(asyncMiddleware(BootcampController.deleteBootcamp));
+BootcampRouter.route('/radius/:zipcode/:distance')
+  .get(asyncMiddleware(BootcampController.getBootcampsWithGeoData));
 
 module.exports = BootcampRouter;
